--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,28 @@
-language: python
-
+language: php
+env: # important!
 matrix:
   include:
-    - os: windows
-      language: sh
-      before_install: 
-        - choco install python --version 3.7.2
-        - export PATH="/c/python37/scripts:/c/python37/:$PATH"
+  - php: 7.0
+    env: KEY=VALUE
   allow_failures:
-    - os: windows
-      language: sh
-      before_install: 
-        - choco install python --version 3.7.2
-        - export PATH="/c/python37/scripts:/c/python37/:$PATH"; 
+  - php: 7.0
+    env: KEY=VALUE
+
+# language: python
+
+# matrix:
+#   include:
+#     - os: windows
+#       language: sh
+#       before_install: 
+#         - choco install python --version 3.7.2
+#         - export PATH="/c/python37/scripts:/c/python37/:$PATH"
+#   allow_failures:
+#     - os: windows
+#       language: sh
+#       before_install: 
+#         - choco install python --version 3.7.2
+#         - export PATH="/c/python37/scripts:/c/python37/:$PATH"; 
         
       
 script:
