--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: php
-env: # important!
 matrix:
   include:
   - php: 7.0
     env: KEY=VALUE
   allow_failures:
   - php: 7.0
-    env: KEY=VALUE
+    env: KEY=VALUE2
 
 # language: python
 
