--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,12 @@ matrix:
       before_install: 
         - choco install python --version 3.7.2
         - export PATH="/c/python37/scripts:/c/python37/:$PATH"
-  allow_failures:
-    - env: ALLOW_FAILURE=TRUE
+    - env: ALLOW_FAILURE=FALSE
+      os: windows
+      language: sh
+      before_install: 
+        - choco install python --version 3.7.2
+        - export PATH="/c/python37/scripts:/c/python37/:$PATH"
         
       
 script:
