--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,28 @@
 language: python
 
+env:
+  global:
+    - PYTHON36="3.6.8"
+    - PYTHON37="3.7.2"
+    - PYTHON38="3.8-dev"
+    - 
+
 matrix:
   allow_failures:
     - env: ALLOW_FAILURE=TRUE
   include:
-    - env: ALLOW_FAILURE=TRUE
-      os: windows
-      language: sh
-      before_install: 
-        - choco install python --version 3.7.2
-        - export PATH="/c/python37/scripts:/c/python37/:$PATH"
     - env: ALLOW_FAILURE=FALSE
       os: windows
       language: sh
       before_install: 
         - choco install python --version 3.7.2
         - export PATH="/c/python37/scripts:/c/python37/:$PATH"
+    - env: ALLOW_FAILURE=TRUE
+      os: windows
+      language: sh
+      before_install: 
+        - choco install python --version 3.8.0-a1 --pre
+        - export PATH="/c/python38/scripts:/c/python38/:$PATH"
         
       
 script:
