--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,8 @@ matrix:
         - source scripts/windows.sh
 
 install:
-  - pip install -rrequirements.txt
+  - python -m pip install --upgrade pip
+  - python -m pip install -rrequirements.txt
   
 script:
   - python --version
