--- a/.travis.yml
+++ b/.travis.yml
@@ -10,19 +10,57 @@ matrix:
   allow_failures:
     - env: PYTHON_VERSION=${PYTHON38}
   include:
-    - env: PYTHON_VERSION=${PYTHON37}
+    - name: "Linux: Python3.6"
+      python: 3.6
+      
+    - name: "Linux: Python3.7"
+      python: 3.7
+      dist: xenial
+      sudo: true
+      
+    - name: "Linux: Python3.8-dev"
+      python: 3.8-dev
+      dist: xenial
+      sudo: true
+      
+    - name: "OSX: Python3.6"
       os: osx
       language: sh
+      env: PYTHON_VERSION=${PYTHON36}
       before_install: 
         - source scripts/osx.sh
-    - env: PYTHON_VERSION=${PYTHON37}
+        
+    - name: "OSX: Python3.7"
+      os: osx
+      language: sh
+      env: PYTHON_VERSION=${PYTHON37}
+      before_install: 
+        - source scripts/osx.sh
+        
+    - name: "OSX: Python3.8-dev"
+      os: osx
+      language: sh
+      env: PYTHON_VERSION=${PYTHON38}
+      before_install: 
+        - source scripts/osx.sh
+
+    - name: "Windows: Python3.6"
       os: windows
       language: sh
+      env: PYTHON_VERSION=${PYTHON36}
       before_install: 
         - source scripts/windows.sh
-    - env: PYTHON_VERSION=${PYTHON38}
+        
+    - name: "Windows: Python3.7"
       os: windows
       language: sh
+      env: PYTHON_VERSION=${PYTHON37}
+      before_install: 
+        - source scripts/windows.sh
+    - name: "Windows: Python3.8"
+      os: windows
+      language: sh
+      env: PYTHON_VERSION=${PYTHON38}
       before_install: 
         - source scripts/windows.sh
 
