--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,7 @@ matrix:
       env: PYTHON_VERSION=${PYTHON37}
       before_install: 
         - source scripts/windows.sh
-    - name: "Windows: Python3.8"
+    - name: "Windows: Python3.8-dev"
       os: windows
       language: sh
       env: PYTHON_VERSION=${PYTHON38}
