--- a/.travis.yml
+++ b/.travis.yml
@@ -67,7 +67,9 @@ matrix:
 
 install:
   - python -m pip install --upgrade pip
-  - python -m pip install -rrequirements.txt
+  - python setup.py install
   
 script:
   - python --version
+  - python setup.py install
+  - python setup.py test
