--- a/.travis.yml
+++ b/.travis.yml
@@ -66,10 +66,9 @@ matrix:
         - source scripts/windows.sh
 
 install:
-  - python -m pip install --upgrade pip
-  - python setup.py install
+  - python --version
+  - pip install --upgrade pip
+  - pip install .
   
 script:
-  - python --version
-  - pip install .
   - python setup.py pytest
