--- a/.travis.yml
+++ b/.travis.yml
@@ -69,6 +69,8 @@ install:
   - python --version
   - pip install --upgrade pip
   - pip install .
+  - pip install .[docs]
+  - pip install .[test]
   
 script:
   - python setup.py pytest
